{community,testing}/qt: upgrade to 5.14.1

--- a/community/qt5-qtbase/APKBUILD
+++ b/community/qt5-qtbase/APKBUILD
@@ -1,13 +1,12 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtbase
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_p/-}
 _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=2
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="Qt5 - QtBase components"
 url="https://qt.io/developers/"
 arch="all"
@@ -42,6 +41,7 @@ makedepends="$depends_dev
 	pcre2-dev
 	postgresql-dev
 	unixodbc-dev
+	vulkan-headers
 	xcb-util-dev
 	xcb-util-image-dev
 	xcb-util-keysyms-dev
@@ -55,17 +55,18 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz
+
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtbase-everywhere-src-$_v.tar.xz
 	qt-musl-iconv-no-bom.patch
 	"
 
 _qt5_prefix=/usr/lib/qt5
 _qt5_datadir=/usr/share/qt5
-builddir="$srcdir"/$_pkgname-${_V%-*}
+builddir="$srcdir"/qtbase-everywhere-src-${_v%-*}
 
 prepare() {
 	default_prepare
-	cd "$builddir"
+
 	sed -i -e "s|-O2|$CXXFLAGS|" \
 		-e "/^QMAKE_RPATH/s| -Wl,-rpath,||g" \
 		-e "/^QMAKE_LFLAGS\s/s|+=|+= $LDFLAGS|g" \
@@ -73,8 +74,6 @@ prepare() {
 }
 
 build() {
-	local _arch
-	cd "$builddir"
 	./configure -confirm-license -opensource \
 		-archdatadir "$_qt5_prefix" \
 		-bindir  "$_qt5_prefix"/bin \
@@ -114,21 +113,19 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make INSTALL_ROOT="$pkgdir" install
 	mkdir -p "$pkgdir"/usr/bin/
-	for i in "$pkgdir"/$_qt5_prefix/bin/*; do
+	for i in "$pkgdir"/"$_qt5_prefix"/bin/*; do
 		_name=${i##*/}
 		case $_name in
 		*.*)	_dest="$pkgdir"/usr/bin/${_name%.*}-qt5.${_name##*.};;
 		*)	_dest="$pkgdir"/usr/bin/${_name%.*}-qt5;;
 		esac
-		ln -s ../lib/qt5/bin/"${_name}" "$_dest"
+		ln -s ../lib/qt5/bin/"$_name" "$_dest"
 	done
 }
 
@@ -145,8 +142,12 @@ dev() {
 	_mv_files usr/lib/qt5/mkspecs \
 		usr/lib/cmake \
 		usr/lib/qt5/bin \
-		usr/bin \
-		$(find usr/ -name '*.prl')
+		usr/bin
+	find usr/ -name '*.prl' | while read -r i
+	do
+		_mv_files "$i"
+	done
+
 	default_dev
 }
 
@@ -199,9 +200,9 @@ x11() {
 		usr/lib/qt5/plugins/printsupport* \
 		usr/lib/qt5/plugins/xcbglintegrations
 
-	scanelf -Rn usr/ | egrep '(libX|libQt5Gui|libGL)' && return 1
+	scanelf -Rn usr/ | grep -E '(libX|libQt5Gui|libGL)' && return 1
 	return 0
 }
 
-sha512sums="9a95060318cadfcd6dace6b28353fa868a8dcfe9def0bd884edf7d9f72606bae625de0269323a94b81d594a6c398106c266304106329b79c7dae4e5b88269660  qtbase-everywhere-src-5.12.5.tar.xz
+sha512sums="964777323d0e3f9d355218c3493bb3b61d2750d9cb5ba71fce72cae3cd362acce88e39360f1fac0011f1b74d529a23621a7281191c622cc034ce78a77afa296b  qtbase-everywhere-src-5.14.1.tar.xz
 7d68421a14f0259535c977d8a521c98918193c107b76ac664571b12f5b0d7588a0d0e1297af412a26753a393b21f3f44c3274fa8ab5bc87f03705a3a03acb444  qt-musl-iconv-no-bom.patch"
