--- a/community/qt5-qtconnectivity/APKBUILD
+++ b/community/qt5-qtconnectivity/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=qt5-qtconnectivity
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=1
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="QT5 Connectivity Compontents"
 url="https://www.qt.io/developers/"
 arch="all"
 license="(LGPL-2.0-or-later OR GPL-3.0-only OR GPL-2.0-or-later) AND Qt-GPL-exception-1.0"
-options="!check" #upstream does not provide check
+options="!check" # upstream does not provide check
 makedepends="qt5-qtbase-dev"
 subpackages="$pkgname-dev"
 
@@ -20,13 +19,13 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_V%-*}
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtconnectivity-everywhere-src-$_v.tar.xz"
+builddir="$srcdir"/qtconnectivity-everywhere-src-${_v%-*}
 
 prepare() {
 	default_prepare
-	cd "$builddir"
+
 	mkdir -p build
 }
 
@@ -40,4 +39,4 @@ package() {
 	cd "$builddir"/build
 	make INSTALL_ROOT="$pkgdir" install
 }
-sha512sums="96cdb27aa0e439094e3f1de0c7a680973c3ce2c65bbbff38affe25a3708c9e4e3c1c6a403d698303f77a5f261b44ac657e01a769b62a1565e0a8c64c8ac80bd5  qtconnectivity-everywhere-src-5.12.5.tar.xz"
+sha512sums="bebffcda3949d798289fcbf8df99afe8fecb6bf410de3fca278f4290f561b75f667ac1f929e62ec423a56c3d80db06ce53d8992f360201e05ed6953af07ceb1a  qtconnectivity-everywhere-src-5.14.1.tar.xz"
