--- a/community/qt5-qtdeclarative/APKBUILD
+++ b/community/qt5-qtdeclarative/APKBUILD
@@ -1,30 +1,29 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtdeclarative
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_p/-}
 _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=2
+pkgrel=0
 pkgdesc="Qt5 - QtDeclarative component"
 url="https://www.qt.io/developers/"
 arch="all" # Broken on armhf, upstream bug report https://bugreports.qt.io/browse/QTBUG-65246
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
-makedepends="qt5-qtbase-dev python3"
+makedepends="qt5-qtbase-dev python3 vulkan-headers"
 subpackages="$pkgname-dev"
 
 case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_v.tar.xz
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtdeclarative-everywhere-src-$_v.tar.xz
 	qt-musl-stackbottom.patch
 	"
 
 _qt5_prefix=/usr/lib/qt5
-builddir="$srcdir/$_pkgname-${_v%-*}"
+builddir="$srcdir/qtdeclarative-everywhere-src-${_v%-*}"
 
 build() {
 	# HACK so calls to "python" get what we want
@@ -47,5 +46,5 @@ package() {
 	done
 }
 
-sha512sums="026c5024c06e44b6e91099d1ee912f38017f314ae0125227010d25d733447c692299cc7c47edc1a4bf39366a9c9c9fe77d3a249905f2ae982d0725317d824b9b  qtdeclarative-everywhere-src-5.12.5.tar.xz
+sha512sums="70094d24a977a5ae4a3a11ee31e49234592faca1ec8195560977e7834778d1b1fdc2a30e555dc6c43c98cef2a39d5c1bf6351093c0f46b9b22b4127f3bebef58  qtdeclarative-everywhere-src-5.14.1.tar.xz
 235091cc1da51c31165a99932c95543d999c0f21b2c6b4318306b647662d420f88d7270ec21db7417fe9f8d87bfa3e5f01b6465c3542da024dd1623ef0a87681  qt-musl-stackbottom.patch"
