--- a/community/qt5-qtgraphicaleffects/APKBUILD
+++ b/community/qt5-qtgraphicaleffects/APKBUILD
@@ -1,12 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtgraphicaleffects
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=1
+pkgrel=0
 pkgdesc="Qt5 - QtGraphicalEffects component"
 url="https://www.qt.io/developers/"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -19,7 +18,7 @@ case $pkgver in
 esac
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtgraphicaleffects-everywhere-src-$_v.tar.xz"
 
-builddir="$srcdir/$_pkgname-${_v%-*}"
+builddir="$srcdir/qtgraphicaleffects-everywhere-src-${_v%-*}"
 
 build() {
 	qmake-qt5 && make
@@ -33,4 +32,4 @@ package() {
 	make install INSTALL_ROOT="$pkgdir"
 }
 
-sha512sums="489a308af5f56ff2b023375ddf705f8a1b15c0e1fb1ec3bc6e5f66a80b5863d63aa0e57a3aef025ab965694add8d71424123bca120ce8d8b8448e7218f7fc640  qtgraphicaleffects-everywhere-src-5.12.5.tar.xz"
+sha512sums="82e3ba00d58137c81be333347970e9e7e8c3301d171792d1f362cff6d5badb7d8148b7748a54d5efd5332f315989f2838638a73d960a8ff3ef875683414880c8  qtgraphicaleffects-everywhere-src-5.14.1.tar.xz"
