--- a/community/qt5-qtlocation/APKBUILD
+++ b/community/qt5-qtlocation/APKBUILD
@@ -1,13 +1,12 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=qt5-qtlocation
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=2
+pkgrel=0
 pkgdesc="Qt5 - Location component"
 url="https://www.qt.io/developers/"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -23,7 +22,7 @@ esac
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtlocation-everywhere-src-$_v.tar.xz
 	fix-build.patch"
 
-builddir="$srcdir/$_pkgname-${_v%-*}"
+builddir="$srcdir/qtlocation-everywhere-src-${_v%-*}"
 
 prepare() {
 	default_prepare
@@ -41,5 +40,5 @@ package() {
 	cd "$builddir"/build
 	make INSTALL_ROOT="$pkgdir" install
 }
-sha512sums="fe82194e4e6bc2a2e6e3c55e3360afdfd56a6495a8d87bfbdceb29255430954d4c1adc62f1f82e63b23778f0bf03b0a50d6f5d2a963bd786f2cf2fbed7450ccc  qtlocation-everywhere-src-5.12.5.tar.xz
+sha512sums="5ccba22c27beb0bbde4b84e510e322445d98f99d87046d463bd054d0a09f0b24af978cf372006aa2cfca0a0ca0fcbb067525a6dc103d2d89592afec0600efcd8  qtlocation-everywhere-src-5.14.1.tar.xz
 eb19b97909b64a82d75732872573b25c626c924aec93dbbe9b1b27fd72354149aa0c4e2d3727a5a2519a7bee39cb6af60761ad40e29b4e7adeb89a300a710505  fix-build.patch"
