--- a/community/qt5-qtmultimedia/APKBUILD
+++ b/community/qt5-qtmultimedia/APKBUILD
@@ -1,19 +1,18 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtmultimedia
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_p/-}
 _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=2
+pkgrel=0
 pkgdesc="Qt5 - Multimedia support"
 url="https://www.qt.io/developers/"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
-makedepends="qt5-qtbase-dev qt5-qtdeclarative-dev
-	alsa-lib-dev libxv-dev gstreamer-dev gst-plugins-base-dev"
+makedepends="qt5-qtbase-dev qt5-qtdeclarative-dev alsa-lib-dev libxv-dev
+	gstreamer-dev gst-plugins-base-dev"
 subpackages="$pkgname-dev"
 
 case $pkgver in
@@ -22,7 +21,7 @@ case $pkgver in
 esac
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtmultimedia-everywhere-src-$_v.tar.xz"
 
-builddir="$srcdir/$_pkgname-${_v%-*}"
+builddir="$srcdir/qtmultimedia-everywhere-src-${_v%-*}"
 
 build() {
 	qmake-qt5 && make
@@ -35,4 +34,4 @@ package() {
 	make install INSTALL_ROOT="$pkgdir"
 }
 
-sha512sums="a59983d887c8de462399fd53beb640c1b865c17f8b1a83635c2e1d27903861dd588eb64935d7c02d733c51c9a21174065e70a5fc1aa78600e5540c489b7695a3  qtmultimedia-everywhere-src-5.12.5.tar.xz"
+sha512sums="5e82d1d6078291d2b4355e03c0a50311847a76065d931039a50c995d18b0a658ed67fd35df78dbb49d7a231745cfdd4fbe7d23f5b652e6bb0737060a9dee5ce3  qtmultimedia-everywhere-src-5.14.1.tar.xz"
