--- a/community/qt5-qtquickcontrols2/APKBUILD
+++ b/community/qt5-qtquickcontrols2/APKBUILD
@@ -1,13 +1,12 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=qt5-qtquickcontrols2
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=1
+pkgrel=0
 pkgdesc="Qt5 - module with set of QtQuick controls for embedded"
 url="https://www.qt.io/developers/"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -23,7 +22,7 @@ case $pkgver in
 esac
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtquickcontrols2-everywhere-src-$_v.tar.xz"
 
-builddir="$srcdir/$_pkgname-${_v%-*}"
+builddir="$srcdir/qtquickcontrols2-everywhere-src-${_v%-*}"
 
 prepare() {
 	default_prepare
@@ -41,4 +40,4 @@ package() {
 	cd "$builddir"/build
 	make INSTALL_ROOT="$pkgdir" install
 }
-sha512sums="afbd742783d83eabf182031e218c2f611709cd66f2b4886317bd356ffff2afabe820e1f552f478a0c3f74daf6fd1f5256900448f5445b84792d6a71b42ccd20a  qtquickcontrols2-everywhere-src-5.12.5.tar.xz"
+sha512sums="c35a450e26f9afb79c237133d407442823fb6bb664c0d2c952b92f9084db85f0e7ba02bac9aca3aef45670fed7da34c7ef183297360cb13aee4260513b4393ee  qtquickcontrols2-everywhere-src-5.14.1.tar.xz"
