--- a/community/qt5-qtremoteobjects/APKBUILD
+++ b/community/qt5-qtremoteobjects/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=qt5-qtremoteobjects
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=1
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="Qt Remote Objects (QtRO) is an inter-process communication (IPC) module developed for Qt"
 url="https://www.qt.io/developers/"
 arch="all"
 license="(LGPL-2.0-or-later OR GPL-3.0-only OR GPL-2.0-or-later) AND Qt-GPL-exception-1.0"
-options="!check" #upstream does not provide check
+options="!check" # upstream does not provide check
 makedepends="qt5-qtbase-dev"
 subpackages="$pkgname-dev"
 
@@ -20,13 +19,13 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_V%-*}
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtremoteobjects-everywhere-src-$_v.tar.xz"
+builddir="$srcdir"/qtremoteobjects-everywhere-src-${_v%-*}
 
 prepare() {
 	default_prepare
-	cd "$builddir"
+
 	mkdir -p build
 }
 
@@ -37,7 +36,7 @@ build() {
 }
 
 check() {
-	cd "$builddir"
+	cd "$builddir"/build
 	make check
 }
 
@@ -45,4 +44,4 @@ package() {
 	cd "$builddir"/build
 	make INSTALL_ROOT="$pkgdir" install
 }
-sha512sums="ed3314b1c66f9375bdc101029eaf730a630157ee41c094de2ff9cc5340c3c92a781dcb2b2cf0b8bbad8b19e566fb80f2d3b76e58624e990f90f23b8cdd21bd54  qtremoteobjects-everywhere-src-5.12.5.tar.xz"
+sha512sums="0bbdc2b1d76cdc65e34f67c9c4cc1bfb8ec148e7b336f5a153a52258c2a06d5ccddfb43d10b7e5c6e04797ef2210ebf0039eae57635197f4d45e3b598d4a3ecc  qtremoteobjects-everywhere-src-5.14.1.tar.xz"
