--- a/community/qt5-qtscript/APKBUILD
+++ b/community/qt5-qtscript/APKBUILD
@@ -1,12 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtscript
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=1
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="Qt5 - QtScript component"
 url="https://www.qt.io/developers/"
 arch="all"
@@ -18,28 +17,25 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz
+
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtscript-everywhere-src-$_v.tar.xz
 	qtscript-everywhere-src-5.10.1-sgidefs.patch
 	qtscript-s390x.patch
 	"
-
-builddir="$srcdir"/$_pkgname-${_V%-*}
+builddir="$srcdir"/qtscript-everywhere-src-${_v%-*}
 
 build() {
-	cd "$builddir"
 	qmake-qt5 && make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make INSTALL_ROOT="$pkgdir" install
 }
 
-sha512sums="a422e47873ddf4c84adf00f51b721465acedfac535b0daeede63eac0d41c6f4f07d5a5f86513c86e981f3a0024020be03730670befab2a20cd4d6564c98d6c90  qtscript-everywhere-src-5.12.5.tar.xz
+sha512sums="9f4fbb038319c93c03117f61380fc6d1064191f0b738de054c2cee2055e7ddbb06ce3d01855b22dc2284858569b4aebb4e838ac0c7432e123421d64909c1d8a4  qtscript-everywhere-src-5.14.1.tar.xz
 c89124fc940ceaa5cfc52c8f48b8eef17bba575a080fad3f27d61e3da98ab5cfd4bb6ffaae09ccae81f6f7644719fa28d38d4b7a7fe4cdb4268673c39627eb22  qtscript-everywhere-src-5.10.1-sgidefs.patch
 a0a22824954d35495d9d08c2b82d6eeeec26765760d417b8bc72c51e1753d4bb9f5e55d5289001d2d6071669a0bfd4f856fc3d0cf58b509bcbcd5211df35e482  qtscript-s390x.patch"
