--- a/community/qt5-qtserialport/APKBUILD
+++ b/community/qt5-qtserialport/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Denis Ryabyy <vv1r0x@gmail.com>
 # Maintainer: Denis Ryabyy <vv1r0x@gmail.com>
 pkgname=qt5-qtserialport
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_p/-}
 _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
+_v=${_ver/rc/RC}
 pkgrel=0
 pkgdesc="Qt5 - QtSerialPort module"
 url="http://wiki.qt.io/QtSerialPort"
 arch="all"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions"
+license="(LGPL-2.0-or-later OR GPL-3.0-only OR GPL-2.0-or-later) AND Qt-GPL-exception-1.0"
 makedepends="qt5-qtbase-dev eudev-dev"
 subpackages="$pkgname-dev"
 
@@ -20,23 +19,20 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/official_releases/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_ver.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_V%-*}
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtserialport-everywhere-src-$_v.tar.xz"
+builddir="$srcdir"/qtserialport-everywhere-src-${_v%-*}
 
 build() {
-	cd "$builddir"
 	qmake-qt5 && make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make INSTALL_ROOT="$pkgdir" install
 }
 
-sha512sums="f3a5fb8c9a9513c16f52bd22b4fd4c6400819863237762f459d9f612ef2457447733cc8ed2bd645f182ab9eab6ddb5bcdbca2fbd67745def1a5fad1392087f4e  qtserialport-everywhere-src-5.12.5.tar.xz"
+sha512sums="89a48df4e31b6ea08b33ba1929b26001c2fc4dd815e7a1860e4a8c3d41437813cc9f0b13c5e2d64bf1357a5a81a619543264e013aa3ca2e5e2439e885ec270eb  qtserialport-everywhere-src-5.14.1.tar.xz"
