--- a/community/qt5-qtspeech/APKBUILD
+++ b/community/qt5-qtspeech/APKBUILD
@@ -1,39 +1,35 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
-# Maintainer:
+# Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtspeech
-_pkgname="${pkgname/qt5-/}-everywhere-src"
-pkgver=5.12.5
+pkgver=5.14.1
 pkgrel=0
 pkgdesc="Qt module to make text to speech and speech recognition easy"
 url="https://qt.io"
 arch="all"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions"
+license="(LGPL-2.0-or-later OR GPL-3.0-only OR GPL-2.0-or-later) AND Qt-GPL-exception-1.0"
 depends="qt5-qtmultimedia"
 makedepends="qt5-qtbase-dev"
 subpackages="$pkgname-dev"
-builddir="$srcdir/$_pkgname-$pkgver"
 
 case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
 
-source="http://download.qt.io/$_rel/qt/${pkgver%.*}/${pkgver}/submodules/$_pkgname-$pkgver.tar.xz"
+source="http://download.qt.io/$_rel/qt/${pkgver%.*}/$pkgver/submodules/qtspeech-everywhere-src-$pkgver.tar.xz"
+builddir="$srcdir/qtspeech-everywhere-src-$pkgver"
 
 build() {
-	cd "$builddir"
 	qmake-qt5
 	make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	INSTALL_ROOT="$pkgdir" make install
 }
 
-sha512sums="2a1a2c86ee3b5501623bb0c2c8e5b6f96b353707fe0eb804629187899eca5952c665ef037c4257f635edf34ddea03bc686f472a4a346d9f8e2adc7479f640482  qtspeech-everywhere-src-5.12.5.tar.xz"
+sha512sums="8249e374735a4a3de6b8795a5c09c9bc285eff8fc7e98e0a2446eb6b7306da1decd657bf92d5b8d195b042e7459097ce9129c8f6e4a23326f698c6e7010c46a1  qtspeech-everywhere-src-5.14.1.tar.xz"
