--- a/community/qt5-qtsvg/APKBUILD
+++ b/community/qt5-qtsvg/APKBUILD
@@ -1,13 +1,12 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtsvg
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=1
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="Qt5 - Support for rendering and displaying SVG"
 url="https://www.qt.io/developers/"
 arch="all"
@@ -19,23 +18,20 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz"
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtsvg-everywhere-src-$_v.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_V%-*}
+builddir="$srcdir"/qtsvg-everywhere-src-${_v%-*}
 
 build() {
-	cd "$builddir"
 	qmake-qt5 && make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make install INSTALL_ROOT="$pkgdir"
 }
 
-sha512sums="3d7f89d106b36c8a0fd04c6e6f0ccde0c50ced7192980ea7d9330ba73d9307559e60ed2b10c28481a419d19aaae6609bde9e1dd74ccedf340dacf0194a60429d  qtsvg-everywhere-src-5.12.5.tar.xz"
+sha512sums="022f2a4ddfb13e8b35746394f968b117b38bb805869cf3dd8f354d3e76b3e64e47414e9d12dcdb04bcf2162b520ee5521836d6ee4a6d1257e7f1e5ec565ca821  qtsvg-everywhere-src-5.14.1.tar.xz"
