--- a/community/qt5-qtvirtualkeyboard/APKBUILD
+++ b/community/qt5-qtvirtualkeyboard/APKBUILD
@@ -1,9 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=qt5-qtvirtualkeyboard
-_pkgname="${pkgname/qt5-/}-everywhere-src"
-pkgver=5.12.5
-pkgrel=2
+pkgver=5.14.1
+pkgrel=0
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.qt.io/developers/"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
@@ -11,7 +10,7 @@ pkgdesc="Virtual keyboard framework"
 depends_dev="qt5-qtsvg-dev"
 makedepends="$depends_dev hunspell-dev qt5-qtbase-dev qt5-qtdeclarative-dev"
 subpackages="$pkgname-dev"
-builddir="$srcdir/$_pkgname-$pkgver"
+builddir="$srcdir/qtvirtualkeyboard-everywhere-src-$pkgver"
 
 case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
@@ -39,4 +38,4 @@ package() {
 	install -d "$pkgdir"/usr/share/licenses
 	ln -s /usr/share/licenses/qt5-base "$pkgdir"/usr/share/licenses/$pkgname
 }
-sha512sums="e4581673451c40bf39b9793b0131bbad29e8a3f9db2d42adb23b48847bd674b6820717c051b76e506d4fd52e87c79b042533be85285a0cce9bcdc49cca964e66  qtvirtualkeyboard-everywhere-src-5.12.5.tar.xz"
+sha512sums="e9e6605590a83d394ed2cb37fffcaef0ae84cc09bfcf388b95c34aa686f4cc40e8f29fa5441a979cca71f5fdb9b53b777658c2d756226483f6104ce20517f42d  qtvirtualkeyboard-everywhere-src-5.14.1.tar.xz"
