--- a/community/qt5-qtwayland/APKBUILD
+++ b/community/qt5-qtwayland/APKBUILD
@@ -1,9 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=qt5-qtwayland
-_pkgname="${pkgname/qt5-/}-everywhere-src"
-pkgver=5.12.5
-pkgrel=3
+pkgver=5.14.1
+pkgrel=0
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.qt.io/developers/"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
@@ -11,15 +10,14 @@ pkgdesc='Provides APIs for Wayland'
 makedepends="$depends_dev libxkbcommon-dev libxcomposite-dev
 	qt5-qtquickcontrols2-dev qt5-qtdeclarative-dev qt5-qtbase-dev wayland-dev"
 subpackages="$pkgname-dev $pkgname-doc"
-builddir="$srcdir/$_pkgname-$pkgver"
+builddir="$srcdir/qtwayland-everywhere-src-$pkgver"
 
 case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
 
-source="http://download.qt.io/$_rel/qt/${pkgver%.*}/$pkgver/submodules/qtwayland-everywhere-src-$pkgver.tar.xz
-	03e8c91fc28b77c4f027b6c6d582b85878efae41.patch"
+source="http://download.qt.io/$_rel/qt/${pkgver%.*}/$pkgver/submodules/qtwayland-everywhere-src-$pkgver.tar.xz"
 
 build() {
 	qmake-qt5
@@ -40,5 +38,4 @@ package() {
 	install -d "$pkgdir"/usr/share/licenses
 	ln -s /usr/share/licenses/qt5-base "$pkgdir"/usr/share/licenses/$pkgname
 }
-sha512sums="19e19b3d6226839856f8e8792665eda1f09f0bbf95a38077bdf2831205ee09254c8df6a521ba3f5a228bcd98c4d1929a2bd9e9aa2f6f14c218d4d7458d1a866c  qtwayland-everywhere-src-5.12.5.tar.xz
-f570e9b11611ec43289afc83230b094f974c7d48be5b79e00b3815b5fb92ec845c768fa2911ccfbeec29dda338d0b3fab8cc9702536c816c78d98820d38466c9  03e8c91fc28b77c4f027b6c6d582b85878efae41.patch"
+sha512sums="6cdfb527ce8160b562343bfb3959dfcd8ccc91a50817756547f4a0559b77372bee7587bc2e4e658e15b58ecb52c6eb0ef2193e30a285d13c4192bb03a1149cfc  qtwayland-everywhere-src-5.14.1.tar.xz"
