--- a/community/qt5-qtwebengine/APKBUILD
+++ b/community/qt5-qtwebengine/APKBUILD
@@ -1,15 +1,14 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtwebengine
-pkgver=5.12.5
-pkgrel=5
+pkgver=5.14.1
+pkgrel=0
 pkgdesc="Qt5 - QtWebEngine components"
 url="https://www.qt.io/developers/"
 # ppc64le, s390x: not supported
 arch="all !ppc64le !s390x !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
-depends_dev="qt5-qtdeclarative-dev qt5-qtwebchannel-dev gstreamer-dev gst-plugins-base-dev
-	libxslt-dev mesa-dev icu-dev libxext-dev glib-dev libxcomposite-dev
-	libxrender-dev ninja ffmpeg-dev
+depends_dev="gstreamer-dev gst-plugins-base-dev libxslt-dev mesa-dev icu-dev
+	libxext-dev glib-dev libxcomposite-dev libxrender-dev ninja ffmpeg-dev
 	"
 makedepends="$depends_dev
 	alsa-lib-dev
@@ -41,6 +40,8 @@ makedepends="$depends_dev
 	pcre-dev
 	protobuf-dev
 	qt5-qtbase-dev
+	qt5-qtdeclarative-dev
+	qt5-qtwebchannel-dev
 	re2-dev
 	ruby
 	snappy-dev
@@ -61,14 +62,12 @@ case $pkgver in
 esac
 
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebengine-everywhere-src-$_v.tar.xz
-	arm-void-is-not-android.patch
 	qt-musl-dispatch_to_musl.patch
 	qt-musl-execinfo.patch
 	qt-musl-mallinfo.patch
 	qt-musl-off_t.patch
 	qt-musl-pvalloc.patch
 	qt-musl-resolve.patch
-	qt-musl-serialio.patch
 	qt-musl-siginfo_t.patch
 	qt-musl-fpstate.patch
 	qt-musl-pread-pwrite.patch
@@ -77,6 +76,9 @@ source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebengin
 	qt-musl-thread-stacksize.patch
 	musl-sandbox.patch
 	yasm-nls.patch
+	nasm.patch
+	musl-hacks.patch
+	sandbox-sched_getparam.patch
 	"
 builddir="$srcdir"/qtwebengine-everywhere-src-$_v
 
@@ -93,20 +95,21 @@ package() {
 	sed -i -e 's:-L/home[^ ]\+::g' "$pkgdir"/usr/lib/pkgconfig/*.pc
 }
 
-sha512sums="b485d37dca14f1cf4adf01bd8b1ae52c1d4916d7acf6ed210bc9feaece8efc2aa6cee8a3ef9174b50b767e373379c6a18d14db4426ac53a8c27d2d7b222826df  qtwebengine-everywhere-src-5.12.5.tar.xz
-5e017e6500af56d0e608839c466782193ab3f6e5d01938b84b7f9c86fbb826e140f9fca789a23e7a7431ba42377be328a8bfcacbf7c302746de79f7857f2832d  arm-void-is-not-android.patch
+sha512sums="fafa2fbc789941e837e35945857a6da00e73bd2abe512290674b9957719b998d8b8b95a35c709a171c9d0d111e6f418cec630dfcdbe47ecbae25a3b94e4c99f9  qtwebengine-everywhere-src-5.14.1.tar.xz
 5ecbf435062b8565322dd1cbd0cbdb44f3daef264ab677fe22fe8cb400d4bb22281cc607ea419c7362c483312482632ed41bd67130413188425ef6e0ae184f07  qt-musl-dispatch_to_musl.patch
-982550095ccebc49b15f71bddc7c7373e8bc1aa88cbc6db0e8984c31d02760e6ed8ec635f5e16faa022cc312f354fc6811d3cd2438e20561be565f3c00bebc67  qt-musl-execinfo.patch
+7084a07386fb9f66fbfeadac53869c0f386cea98dbb29787f030635bc8cd116b7459acafbe06540f1aef79d8a69817520ad18bcb9ac24954dd70773ef083537e  qt-musl-execinfo.patch
 229f148c2b9bbb517409d3627e3bacf144cd39bfd3b7915f35de2f3b8c3e19f80c93799ef42784014cdd79af7b56557b6852632c4f1646a747d9eed24f61decb  qt-musl-mallinfo.patch
 7eba28eb015f1a7e5cf70e9354fcd647b69f4e7c061b889a8c0d55f4a94a033f95d0252f9baebf13c3d501438074a05d547eef2c8cf898dc2c87cec3b60e76e0  qt-musl-off_t.patch
 ac563e0c444a6d3214ff7465cad2c701692cfa90408c57243d3ae9459937c36e88acd57335bb90da85157e03865faaf17d61a767483b00ed8f3580ebf8a2fbb5  qt-musl-pvalloc.patch
 8d95e4fcb463b5d2053c9538e66150ec9a3acddd7815cc34c8cd6fa115e49f1d602c4f1fc73f5e507a932c918e36c9c3d1386476dca91c5fc422906d0d88f610  qt-musl-resolve.patch
-c39b4c39ad3e297dc4f2508af9fb6b1618e8f6fac4399e41b5bde00a1e79cc0cd24af8b8c01bfe61e4748b2b74778a06afff166095e59baf491d6fc56f3537f7  qt-musl-serialio.patch
 2fead16e7d7379b622da0e3172905444d9d72d1a53ff080327a3d59f60541c5c076d9b58f110b039da8c9ebc3b5efec53af118e1172efd01886ff9ac2b730d5f  qt-musl-siginfo_t.patch
 059f22a594a046d552a33b17d811c50b645c4be11a49ed3b29a32ce38d501fd07c1e15a4e1075c46f984c850bf88aecb357e4310a62b30494ea25297055f05c8  qt-musl-fpstate.patch
 b1f7823d0bdd14dbcb4dbd72ab2d16460d343722d2601921a50f8912ce580a632e0d7b01d7fea6f27ff5014a1f21595c6d8d4500b995bcc6db38cbd10ac4aa96  qt-musl-pread-pwrite.patch
 987b9b35d04317e22ae2cce382e776f3309fc7fd4588e408cd6bed846f47620d01e2b9958cb60c84b8f6f496de6544a21ba399ba8b8f107b73df179794740092  qt-musl-sysreg-for__WORDSIZE.patch
 7dc3e9995596adef65cd96f650eb7ee13d52cabfe6353f04eeb5b8a5776e7e0585ffc2a0a31deea6924352ee9a5a8e03ac37432b558c6a46f3dc457b4283392a  qt-musl-stackstart.patch
 b37fbc4df03c82123f94982039defa12d9bb8c885c9dcf8fff556b5f9cc58182fa471f970cc3a5e2d5dbe964855f591b474366b6a8926d94ae6a78e883811c1a  qt-musl-thread-stacksize.patch
-76b1966bdd76fd22f0073b23be50f69fb95451e06bdce567a439b0fbb69ff2956264704f5b53c50842e9c4aafaab7d2f330465a04092b66c5965e5d0ae2c7761  musl-sandbox.patch
-f6b1941e40f44b675ab554166e3cd8d3272b23f48571b4949b3af7b8e1c642ee84fe0ee26dd2457fc3bf20e9924cddb411e293b7a8a103029ee196587371a1e2  yasm-nls.patch"
+89005585780ee4459ae3f065f056e166c7686d4dfe3e9e3f2a77b0ed7b8ba819eeb1c9659a971c9cda79cf7fb49b29189765f010a7a55167b6e3282c62c4cbe1  musl-sandbox.patch
+f6b1941e40f44b675ab554166e3cd8d3272b23f48571b4949b3af7b8e1c642ee84fe0ee26dd2457fc3bf20e9924cddb411e293b7a8a103029ee196587371a1e2  yasm-nls.patch
+9add958caa0d6acb2866d3927aadfa6b378c92d62463f1b3d65ae1e5400915d89388ac54beb30c4d4d42d2901ee28f404d8574b771854556f6a75698301870eb  nasm.patch
+b99eaa4a0b06ab1cb461fc4bfc7416c779ba1e847614b96f08de97a137a09577ea642813e5e3235167ccc5180c6ffcc06ebf2a61e3b4c210de9dee765e0e7404  musl-hacks.patch
+dbe606be93377f094c6a1ab0358ae042f3e7aff95c635b07ebc04aa3173f7221a478fd544e8347152a4ca125a837d6da774929423868d5c9d5bd6165bdd1ba6d  sandbox-sched_getparam.patch"
