--- a/community/qt5-qtwebsockets/APKBUILD
+++ b/community/qt5-qtwebsockets/APKBUILD
@@ -1,14 +1,13 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=qt5-qtwebsockets
-_pkgname=qtwebsockets-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_p/-}
 _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=1
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="Provides WebSocket communication compliant with RFC 6455"
 url="https://www.qt.io/developers/"
 arch="all"
@@ -16,19 +15,19 @@ license="(LGPL-3.0-or-later OR GPL-3.0-only OR GPL-2.0-or-later) AND Qt-GPL-exce
 makedepends="qt5-qtbase-dev"
 subpackages="$pkgname-dev"
 replaces="qt5-websockets"
+options="!check"
 
 case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-options="!check"
-source="https://download.qt.io/official_releases/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_ver.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_V%-*}
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebsockets-everywhere-src-$_v.tar.xz"
+builddir="$srcdir"/qtwebsockets-everywhere-src-${_v%-*}
 
 prepare() {
 	default_prepare
-	cd "$builddir"
+
 	mkdir -p build
 }
 
@@ -43,4 +42,4 @@ package() {
 	make INSTALL_ROOT="$pkgdir" install
 }
 
-sha512sums="970ad232ad1258630404d5e7347721505a780497e1775f88591098f11bca48cbf62c4f02491b133d31e4304eb9e16f923292c5b778e22d530d7a5a4e95d422ba  qtwebsockets-everywhere-src-5.12.5.tar.xz"
+sha512sums="ce8926f0c8022182504184141c64897c5c71e430d6366b1d0802247e81445934db419ff61625b046b624de7b459c74f9634ae2a13e2d646a1b1811c4dbe177eb  qtwebsockets-everywhere-src-5.14.1.tar.xz"
