--- a/community/qt5-qtx11extras/APKBUILD
+++ b/community/qt5-qtx11extras/APKBUILD
@@ -1,14 +1,13 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=qt5-qtx11extras
-_pkgname=qtx11extras-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_p/-}
 _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=1
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="Provides platform-specific APIs for X11"
 url="https://www.qt.io/developers/"
 arch="all"
@@ -21,13 +20,13 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz"
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtx11extras-everywhere-src-$_v.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_V%-*}
+builddir="$srcdir"/qtx11extras-everywhere-src-${_v%-*}
 
 prepare() {
 	default_prepare
-	cd "$builddir"
+
 	mkdir -p build
 }
 
@@ -47,4 +46,4 @@ package() {
 	make INSTALL_ROOT="$pkgdir" install
 }
 
-sha512sums="1e83c2d350f423053fe07c41a8b889391100df93dd50f700e98116c36b3dbad9637a618765daf97b82b7ffcd0687fc52c9590d9ce48c2a9204f1edc6d2cae248  qtx11extras-everywhere-src-5.12.5.tar.xz"
+sha512sums="e88c9e0440c5d12003d74182dab5e63f0c65ced93447b5c3cabccd1c8c96e9b8e38fce327e678a433af18d2af683bb4f939dbc3e7bea2e911eeeb71ebe70c058  qtx11extras-everywhere-src-5.14.1.tar.xz"
