--- a/testing/shiboken2/APKBUILD
+++ b/testing/shiboken2/APKBUILD
@@ -1,9 +1,8 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=shiboken2
-_pkgname=pyside-setup-everywhere-src
-pkgver=5.12.5
-pkgrel=3
+pkgver=5.14.1
+pkgrel=0
 pkgdesc="CPython bindings generator for C++ libraries"
 url="https://wiki.qt.io/Qt_for_Python/Shiboken"
 arch="all !armhf" # qt5-qtxmlpatterns -> qt5-qtdeclarative
@@ -21,28 +20,23 @@ makedepends="
 	"
 subpackages="$pkgname-doc lib$pkgname:libs lib$pkgname-dev py3-$pkgname:py3"
 source="
-	https://download.qt.io/official_releases/QtForPython/pyside2/PySide2-$pkgver-src/$_pkgname-$pkgver.tar.xz
+	https://download.qt.io/official_releases/QtForPython/pyside2/PySide2-$pkgver-src/pyside-setup-opensource-src-$pkgver.tar.xz
 	musl-execinfo.patch
 "
-builddir="$srcdir/$_pkgname-$pkgver"
+builddir="$srcdir/pyside-setup-opensource-src-$pkgver"
 
 provides="shiboken=$pkgver-r$pkgrel" # For backward compatibility
 replaces="shiboken" # For backward compatibility
 
-prepare() {
-	mkdir build
-	default_prepare
-}
-
 build() {
-	cd build
+
 	export CLANG_INSTALL_DIR=/usr
-	cmake ../sources/shiboken2 \
+	cmake -B "$builddir"/build sources/shiboken2 \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_BUILD_TYPE=None \
 		-DBUILD_TESTS=OFF \
 		-DUSE_PYTHON_VERSION=3
-	make
+	make -C build
 }
 
 package() {
@@ -71,5 +65,5 @@ py3() {
 	replaces="py3-shiboken" # For backward compatibility
 }
 
-sha512sums="3c0c5b1d701e8085ff3b39effdd2c4dc042f6385ed8a222264d36b2052cdb6fde6a44e9b87c94001890c8b4e4c0f2ed6e81ab0edbdba977edfdc98fefe32809d  pyside-setup-everywhere-src-5.12.5.tar.xz
+sha512sums="6dfe8dc6f302a35a6448c4facb2b98d638506381638c8bda69b75a47ea6cb3168b11515faf0000dbfb5e36bfad5d14488ba5a9bd914adb3f5c38ed18714521d4  pyside-setup-opensource-src-5.14.1.tar.xz
 c894721b731e2f3819c5f985a6f9dc448e843c36d052143e34c4a7ccd7dc4599c15e0bf108a8362a9771c107bf45e1eff8d9d19a5d50318998abf10bfb7f3650  musl-execinfo.patch"
