--- a/community/qt5-qtcharts/APKBUILD
+++ b/community/qt5-qtcharts/APKBUILD
@@ -1,13 +1,12 @@
 # Contributor: Simon Frankenberger <simon-alpine@fraho.eu>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtcharts
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=1
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="Qt5 - Support for rendering and displaying SVG"
 url="https://www.qt.io/developers/"
 arch="all"
@@ -19,23 +18,20 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_V%-*}
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtcharts-everywhere-src-$_v.tar.xz"
+builddir="$srcdir"/qtcharts-everywhere-src-${_v%-*}
 
 build() {
-	cd "$builddir"
 	qmake-qt5 && make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make install INSTALL_ROOT="$pkgdir"
 }
 
-sha512sums="a3ba8c6a606430cd87f85661116dbb2692e0bb472f0a73310aca1950f4437563d04ee950437a48a399b1a4881dd264cd1e6fdd4f30b6c3110704ec48d1467da1  qtcharts-everywhere-src-5.12.5.tar.xz"
+sha512sums="5cf2739a5bc67ed25cb6f39bd795447c1e37963d1f3726d37ad9a2894080db3329fd2c6b17937ad831db78f5099e7c3b4ecd02991a7a69eb482ab61877d54d0f  qtcharts-everywhere-src-5.14.1.tar.xz"
