--- a/community/qt5-qtimageformats/APKBUILD
+++ b/community/qt5-qtimageformats/APKBUILD
@@ -1,12 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtimageformats
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=1
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="Qt5 - QtImageFormats component"
 url="https://www.qt.io/developers/"
 arch="all"
@@ -17,9 +16,9 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_V%-*}
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtimageformats-everywhere-src-$_v.tar.xz"
+builddir="$srcdir"/qtimageformats-everywhere-src-${_v%-*}
 
 build() {
 	qmake-qt5 && make
@@ -33,4 +32,4 @@ package() {
 	make install INSTALL_ROOT="$pkgdir"
 }
 
-sha512sums="9fa76b7eec083596c45f68642b49dc88c2759a28cb9359935c3a64604082acea9adecee49bb0828cc587b86d469aec7169f8f72f83a15194c4fc10f0ca25fae0  qtimageformats-everywhere-src-5.12.5.tar.xz"
+sha512sums="843c8288a79506d4f2ac9e318f9478d689045bd0de1c2d9a529b060bd44dc7823561baef290bc54ed6cc756027f1dcdb8f706a2bd122ec9aec18848e5d316555  qtimageformats-everywhere-src-5.14.1.tar.xz"
