--- a/community/qt5-qtquickcontrols/APKBUILD
+++ b/community/qt5-qtquickcontrols/APKBUILD
@@ -1,12 +1,11 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=qt5-qtquickcontrols
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=2
+pkgrel=0
 pkgdesc="Qt5 - module with set of QtQuick controls"
 url="https://www.qt.io/developers/"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -19,7 +18,7 @@ case $pkgver in
 esac
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtquickcontrols-everywhere-src-$_v.tar.xz"
 
-builddir="$srcdir/$_pkgname-${_v%-*}"
+builddir="$srcdir/qtquickcontrols-everywhere-src-${_v%-*}"
 
 build() {
 	qmake-qt5 && make
@@ -33,4 +32,4 @@ package() {
 	make install INSTALL_ROOT="$pkgdir"
 }
 
-sha512sums="4539a6ce1ee20f71f6bf48271bc3fe1125bd21899cf36142d1c3d41a68ba56211f27d6e4403c69e86bd4698c7c7c79bc60f2a78ef1b19c5eab5b8690d1a01037  qtquickcontrols-everywhere-src-5.12.5.tar.xz"
+sha512sums="63157debfdab05f8fe141964c5a7d61373a422a7f46c01d1e5a7123998700790c63c8a5f1489c6fb25fd89c3065e1982605180568cf6a69835feeda441582be4  qtquickcontrols-everywhere-src-5.14.1.tar.xz"
