--- a/community/qt5-qtsensors/APKBUILD
+++ b/community/qt5-qtsensors/APKBUILD
@@ -1,13 +1,12 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=qt5-qtsensors
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=1
+pkgrel=0
 pkgdesc="+The Qt Sensors API provides access to sensor hardware via QML and C++"
 url="https://www.qt.io/developers/"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -22,7 +21,7 @@ case $pkgver in
 esac
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtsensors-everywhere-src-$_v.tar.xz"
 
-builddir="$srcdir/$_pkgname-${_v%-*}"
+builddir="$srcdir/qtsensors-everywhere-src-${_v%-*}"
 
 prepare() {
 	default_prepare
@@ -40,4 +39,4 @@ package() {
 	cd "$builddir"/build
 	make INSTALL_ROOT="$pkgdir" install
 }
-sha512sums="81ac74e4c0a3d1942393c9267bbcc50af0e04a6f163d566010d6053dc4c69a67395c3f4b7564a50ec84ac88a715edd002920be4e145e6bd23d082a021dee1e5a  qtsensors-everywhere-src-5.12.5.tar.xz"
+sha512sums="48113863561ca0e5ada249505f2e8dd20512c2591823f296e5a4aacbfadf24e221c7ef4564071a300aafb8dcd88e87bb27a864c4f36e534089084c347e2a7bed  qtsensors-everywhere-src-5.14.1.tar.xz"
