--- a/community/qt5-qttools/APKBUILD
+++ b/community/qt5-qttools/APKBUILD
@@ -1,12 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qttools
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=1
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="Qt5 - QtTool components"
 url="https://www.qt.io/developers/"
 arch="all"
@@ -18,7 +17,7 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qttools-everywhere-src-$_v.tar.xz
 	assistant-qt5.desktop
 	designer-qt5.desktop
 	linguist-qt5.desktop
@@ -26,7 +25,7 @@ source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-
 	"
 
 _qt5_prefix=/usr/lib/qt5
-builddir="$srcdir"/$_pkgname-${_V%-*}
+builddir="$srcdir"/qttools-everywhere-src-${_v%-*}
 
 build() {
 	qmake-qt5 && make
@@ -37,7 +36,7 @@ package() {
 
 	# -qt5 symlinks
 	mkdir -p "$pkgdir"/usr/bin/
-	for i in "$pkgdir"/$_qt5_prefix/bin/*; do
+	for i in "$pkgdir"/"$_qt5_prefix"/bin/*; do
 		ln -s ../lib/qt5/bin/${i##*/} "$pkgdir"/usr/bin/${i##*/}-qt5
 	done
 
@@ -62,7 +61,7 @@ package() {
 	for icon in src/linguist/linguist/images/icons/linguist-*-32.png ; do
 		size=$(echo ${icon##*/} | cut -d- -f2)
 	    install -p -m644 -D ${icon} \
-		"$pkgdir"/usr/share/icons/hicolor/${size}x${size}/apps/linguist.png
+		"$pkgdir"/usr/share/icons/hicolor/"$size"x"$size"/apps/linguist.png
 	done
 }
 
@@ -107,7 +106,7 @@ _dbusviewer() {
 		usr/share/icons/hicolor/*/apps/qdbusviewer*
 }
 
-sha512sums="e88af049ad9261720bc44ff9030113179d9429eaf073bed45115decd520ecf5d3ca860983f012bac189310ce9f3826b1fcb484faadb4f6d0b16c67c0d998f34c  qttools-everywhere-src-5.12.5.tar.xz
+sha512sums="59874ed00f7f9749f0dda49d6e1ad064d1594c6b0bde577961c5d45628763d2a2031aa7ebed952f1cebc8a241eb6a0e4a4f8e36c0a93ffe738a0ff360b8d3f30  qttools-everywhere-src-5.14.1.tar.xz
 d566c5284854855541df7177b23f491d96f5064b571e899a44f1d4fcf8bbf1223590b05b1954278dc6f3f56341c917f5b846594c5bd2215b6a859224038d8ad2  assistant-qt5.desktop
 72d9a2235a60c4ae05ba8395d473fe0b42c12e584da619dadb112eb67ba33a85fe0dab6c185d98112d7b25d3eeacaf02f7ef4731742e50c17eacc54c383661b3  designer-qt5.desktop
 b6d8a672d19eed39ab868ff6fc880f255da94acb9e1e84f5905c0f3b9b6055547e8a706492973692c06dc23d35ce77622fc13efc11adf21b62c3baf4ef5ab2ad  linguist-qt5.desktop
