--- a/community/qt5-qttranslations/APKBUILD
+++ b/community/qt5-qttranslations/APKBUILD
@@ -1,12 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qttranslations
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
-_V=${_ver/rc/RC}
-pkgrel=1
+_v=${_ver/rc/RC}
+pkgrel=0
 pkgdesc="Qt5 - QtTranslations module"
 url="https://www.qt.io/developers/"
 arch="noarch"
@@ -17,22 +16,19 @@ case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
 *) _rel=official_releases;;
 esac
-source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/$_pkgname-$_V.tar.xz"
+source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qttranslations-everywhere-src-$_v.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_V%-*}
+builddir="$srcdir"/qttranslations-everywhere-src-${_v%-*}
 
 build() {
-	cd "$builddir"
 	qmake-qt5 && make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 package() {
-	cd "$builddir"
 	make install INSTALL_ROOT="$pkgdir"
 }
 
-sha512sums="a2120add3b82fd84d44a064f08c5e781410c86dfd5eee39a01f44840063be5b4030c47989a2e6a413c4298d79b473f50968078a12793b9145d7ee8a722fd1698  qttranslations-everywhere-src-5.12.5.tar.xz"
+sha512sums="e90a630fc1014543c3dd07379a7a4098664e25ec59e7c67ec8f9367e015a4351f8914954d3334ff44508a417cbd55a8dcf6f03c91aa75217fc723749726534d3  qttranslations-everywhere-src-5.14.1.tar.xz"
