--- a/community/qt5-qtwebchannel/APKBUILD
+++ b/community/qt5-qtwebchannel/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=qt5-qtwebchannel
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=1
+pkgrel=0
 pkgdesc="library for seamless integration of C++ +and QML applications with HTML/JavaScript clients."
 url="https://www.qt.io/developers/"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
-options="!check" #upstream does not provide check
+options="!check" # upstream does not provide check
 makedepends="qt5-qtbase-dev qt5-qtwebsockets-dev qt5-qtdeclarative-dev"
 subpackages="$pkgname-dev"
 
@@ -22,7 +21,7 @@ case $pkgver in
 esac
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtwebchannel-everywhere-src-$_v.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_v%-*}
+builddir="$srcdir"/qtwebchannel-everywhere-src-${_v%-*}
 
 prepare() {
 	default_prepare
@@ -40,4 +39,4 @@ package() {
 	cd "$builddir"/build
 	make INSTALL_ROOT="$pkgdir" install
 }
-sha512sums="8ea543f29e8f686961b033c1246714b1535d0be730026bef4b4ee172ce602c706d8a16b8391510a302df7be6545007a2f42311eb1aea4da326c3addde16ca2b2  qtwebchannel-everywhere-src-5.12.5.tar.xz"
+sha512sums="7abe214227efcea665a38488b73286ae8335490d825dd8886270e2c1cbf7382e27d6ec368b28f9876d6843029023a63e58f42e2bdb6aeb1502ae464af3e8666e  qtwebchannel-everywhere-src-5.14.1.tar.xz"
