--- a/community/qt5-qtxmlpatterns/APKBUILD
+++ b/community/qt5-qtxmlpatterns/APKBUILD
@@ -1,12 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtxmlpatterns
-_pkgname=${pkgname/qt5-//}-everywhere-src
-pkgver=5.12.5
+pkgver=5.14.1
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=1
+pkgrel=0
 pkgdesc="Qt5 - QtXmlPatterns component"
 url="https://www.qt.io/developers/"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -20,8 +19,7 @@ case $pkgver in
 esac
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/$_ver/submodules/qtxmlpatterns-everywhere-src-$_v.tar.xz"
 
-builddir="$srcdir"/$_pkgname-${_v%-*}
-builddir="$srcdir"/$_pkgname-$_v
+builddir="$srcdir"/qtxmlpatterns-everywhere-src-${_v%-*}
 
 build() {
 	qmake-qt5 && make
@@ -35,4 +33,4 @@ package() {
 	make install INSTALL_ROOT="$pkgdir"
 }
 
-sha512sums="30b25e152970bfe51fcdeffa43d11dd51496e5ea6a5da644b13fa0ce4835302ebec651c1ecdcf9590c6689598cea9bd63748aab4ee0ec69f9155dc310a7c04c3  qtxmlpatterns-everywhere-src-5.12.5.tar.xz"
+sha512sums="01a1e1af16c37cda8de23ed8da7f42f8f59116a3c7ff35fed4c589ab41f32c9e4ee3ef782517538e7d85ed86ad42bf5cf729bee9c239e4a1d7bf30458403a4ed  qtxmlpatterns-everywhere-src-5.14.1.tar.xz"
