main/mkinitfs: depend explicitly on kmod to use modinfo command

--- a/main/mkinitfs/APKBUILD
+++ b/main/mkinitfs/APKBUILD
@@ -2,28 +2,26 @@
 pkgname=mkinitfs
 pkgver=3.4.5
 _ver=${pkgver%_git*}
-pkgrel=0
+pkgrel=1
 pkgdesc="Tool to generate initramfs images for Alpine"
 url="https://git.alpinelinux.org/cgit/mkinitfs"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-only"
 # currently we do not ship any testsuite
 options="!check"
 makedepends_host="busybox kmod-dev util-linux-dev cryptsetup-dev linux-headers"
 makedepends="$makedepends_host"
-depends="busybox>=1.28.2-r1 apk-tools>=2.9.1 lddtree>=1.25"
+depends="busybox>=1.28.2-r1 apk-tools>=2.9.1 lddtree>=1.25 kmod"
 subpackages="$pkgname-doc"
 install="$pkgname.pre-upgrade $pkgname.post-install $pkgname.post-upgrade"
 triggers="$pkgname.trigger=/usr/share/kernel/*"
-source="https://dev.alpinelinux.org/archive/$pkgname/$pkgname-$_ver.tar.xz"
+source="https://dev.alpinelinux.org/archive/mkinitfs/mkinitfs-$_ver.tar.xz"
 
 build() {
-	cd "$builddir"
 	make VERSION=$pkgver-r$pkgrel
 }
 
 package() {
-	cd "$builddir"
 	make install DESTDIR="$pkgdir"
 }
 
