newapkbuild: use 'plain' buildtype for meson and 'None' buildtype for CMake
This way Meson and CMake will use the C{,PP,XX}FLAGS we've set in
`/etc/abuild.conf`. Without this change CMake and meson will overwrite
our CFLAGS with custom flags. Most importantly, they prefer -O1/-O2 over
our -Os.

See also: https://lists.alpinelinux.org/~alpine/devel/%3C2896c13070c508a49cbaa72c8fb7f34ea947358b.camel%40cogitri.dev%3E

--- a/newapkbuild.in
+++ b/newapkbuild.in
@@ -65,7 +65,7 @@ build_cmake() {
 		-DCMAKE_INSTALL_PREFIX=/usr \\
 		-DCMAKE_INSTALL_LIBDIR=lib \\
 		-DBUILD_SHARED_LIBS=True \\
-		-DCMAKE_BUILD_TYPE=Release \\
+		-DCMAKE_BUILD_TYPE=None \\
 		-DCMAKE_CXX_FLAGS="\$CXXFLAGS" \\
 		-DCMAKE_C_FLAGS="\$CFLAGS" \\
 		\${CMAKE_CROSSOPTS} .
@@ -85,7 +85,7 @@ build_meson() {
 		--sysconfdir=/etc \\
 		--mandir=/usr/share/man \\
 		--localstatedir=/var \\
-		--buildtype=release \\
+		--buildtype=plain \\
 		. output
 	ninja -C output
 __EOF__
